# FruitalCombat

./: CMakeLists.txt  CMakeSettings.json  Fruital_Combat.txt  LICENSE.txt  README.md
.agents/: 01-ecs-architect.md  02-gameplay-engineer.md  03-ui-state-manager.md
assets/configs/: enemies.json  fruits.json  languages_names.json  maps.json  shop.json  supported_languages.json  upgrades.json
assets/locales/: de.json  en.json  es.json  fr.json  pl.json  pt-BR.json  ru.json
src/: main.cpp
src/abilities/: Ability.h  AcidPoolUltimate.cpp  AcidPoolUltimate.h  AcidSquirtAbility.cpp  AcidSquirtAbility.h  CiderDashAbility.cpp  CiderDashAbility.h  DashAbility.cpp  DashAbility.h  MultiShootAbility.cpp  MultiShootAbility.h  PoisonExplosionAbility.cpp  PoisonExplosionAbility.h  RindRollAbility.cpp  RindRollAbility.h  ShootAbility.cpp  ShootAbility.h  ShotgunAbility.cpp  ShotgunAbility.h  WindupBruisierAbility.cpp  WindupBruisierAbility.h
src/components/: Ability.h  AbilityComponent.cpp  AbilityComponent.h  AcidSquirtAbility.cpp  AcidSquirtAbility.h  AiInputComponent.cpp  AiInputComponent.h  AoEComponent.cpp  AoEComponent.h  Bullet.cpp  Bullet.h  ColliderComponent.cpp  ColliderComponent.h  Component.h  DNAComponent.cpp  DNAComponent.h  DashAbility.cpp  DashAbility.h  DeathRattleComponent.h  JuiceComponent.cpp  JuiceComponent.h  LifespanComponent.cpp  LifespanComponent.h  ManaPouchComponent.h  MedkitComponent.h  MovementComponent.cpp  MovementComponent.h  ParticleComponent.cpp  ParticleComponent.h  PickupComponent.cpp  PickupComponent.h  PlayerInputComponent.cpp  PlayerInputComponent.h  PopAnimationComponent.cpp  PopAnimationComponent.h  ProjectileComponent.cpp  ProjectileComponent.h  RindRollAbility.cpp  RindRollAbility.h  ShootAbility.cpp  (+14 more)
src/core/: AnimationController.cpp  AnimationController.h  ArenaContext.h  AssetGroup.h  AudioManager.cpp  AudioManager.h  Config.h  Game.cpp  Game.h  GameWorld.cpp  GameWorld.h  LocalizationManager.cpp  LocalizationManager.h  PlayerProfile.h  ResourceManager.cpp  ResourceManager.h  State.h  StateMachine.cpp  StateMachine.h
src/effects/: AcidSplash.cpp  AcidSplash.h  FloatingText.h
src/entities/: Entity.h  EntityTypes.h  JuiceDrop.h  Player.h
src/entities/player/: Player.cpp  Player.h
src/factories/: FruitFactory.cpp  FruitFactory.h  MutantFactory.cpp  MutantFactory.h
src/genetics/: DNA.h
src/projectiles/: Bullet.cpp  Bullet.h
src/states/: BestiariusState.cpp  BestiariusState.h  CharacterSelectState.cpp  CharacterSelectState.h  DeathState.cpp  DeathState.h  IntroState.cpp  IntroState.h  LobbyState.cpp  LobbyState.h  MapSelectState.cpp  MapSelectState.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  PlayingState.cpp  PlayingState.h  SettingsState.cpp  SettingsState.h  ShopInGameState.cpp  ShopInGameState.h  ShopState.cpp  ShopState.h  State.cpp  State.h
src/systems/: CollisionSystem.cpp  CollisionSystem.h  CombatSystem.cpp  CombatSystem.h  EvolutionManager.cpp  EvolutionManager.h  ItemSpawnSystem.cpp  ItemSpawnSystem.h  MapHazardSystem.cpp  MapHazardSystem.h  ParticleSystem.cpp  ParticleSystem.h  RenderSystem.cpp  RenderSystem.h
src/utils/: AnimationController.cpp  AnimationController.h  MathUtils.h  RoundedRectangleShape.h  VideoPlayer.h
